# practica1-EDD-2024

./: README.md
cartas/: CMakeLists.txt  MakeFile  Makefile  main.cpp
cartas/Movimiento/: Movimiento.cpp  Movimiento.h
cartas/carta/: Carta.cpp  Carta.h
cartas/cola/: Cola.cpp  Cola.h
cartas/control-cartas/: ControlCartas.cpp  ControlCartas.h
cartas/game/: Game.cpp  Game.h
cartas/lista/: ListaDoble.cpp  ListaDoble.h
cartas/movimiento/: ListMovment.cpp  ListMovment.h  Movimiento.h
cartas/pila/: Pila.cpp  Pila.h
cartas/utiles/: Utiles.cpp  Utiles.h
documentación/: Manual de usuario.docx
